# s3empty

./: CHANGELOG.md  Makefile  README.md  piemaker.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-workflow.yaml  publish-workflow.yaml  release-major-workflow.yaml  release-minor-workflow.yaml  release-patch-workflow.yaml  upgrade-deps-workflow.yaml
complexity/wily/: index.html
coverage/coverage/: class_index.html  d_af8830d2d477e9bb___init___py.html  d_af8830d2d477e9bb_logger_py.html  function_index.html  index.html  status.json  z_af8830d2d477e9bb___init___py.html  z_af8830d2d477e9bb_logger_py.html
doc/sphinx/: conf.py  genindex.html  index.html  index.rst  objects.inv  s3empty.html  search.html
doc/sphinx/_build/doctrees/: environment.pickle  index.doctree  s3empty.doctree
doc/sphinx/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  s3empty.html  search.html  searchindex.js
doc/sphinx/_build/html/_sources/: index.rst.txt  s3empty.rst.txt
doc/sphinx/_sources/: index.rst.txt
examples/: s3empty-cli.sh  s3empty-conf-inexisting.yaml  s3empty-conf.yaml  s3empty-conf.yaml.j2
lint/pylint/: index.html  report.json
s3empty/: __init__.py
test-integration/pytest/: index.html
test/pytest/: index.html
tests/: test_logger.py  test_s3_empty.py
tests-integration/: test_cli.py  test_constructor.py
